--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
   <h1>Get Snakio Game</h1>
   <p>Click below to download the game and play it on your computer!</p>
   <br>
-  <a href="https://example.com/Snakio.zip" download>
+  <a href="https://roblox.com" download>
     <button>Download Snakio</button>
   </a>
 </body>
