--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <div id="quit-modal">
     <div id="quit-modal-inner">
       <h1>Goodbye!</h1>
-      <p>Thanks for checking out 3D Snake.io.<br>Reload the page to play again.</p>
+      <p>Thanks for checking out 3D Snakio.io.<br>Reload the page to play again.</p>
       <button id="quit-close-btn">Close</button>
     </div>
   </div>
